--- a/start/TODO
+++ b/start/TODO
@@ -1,5 +1,5 @@
-- Merge .py scripts
-- Check outputs with Nambo, Guzman & Ortiz
-- Check rk methods
+- Merge .py scripts					DONE
+- Check outputs with Nambo, Guzman & Ortiz		DONE Ortyz and Guzman
+- Check rk methods					DONE
 - Add generalized piecewise polytropic EOS
 - Check outputs with Boyle et al
