--- a/start/TODO
+++ b/start/TODO
@@ -1,5 +1,7 @@
 - Merge .py scripts					DONE
 - Check outputs with Nambo, Guzman & Ortiz		DONE Ortyz and Guzman
 - Check rk methods					DONE
-- Add generalized piecewise polytropic EOS
-- Check outputs with Boyle et al
+- Add generalized piecewise polytropic EOS		DONE
+- Check outputs with Boyle et al			
+- Check no output in FPROFILE w/GPP
+- Improvements in integration() function
